Changes in rigidbody class

--- a/projects/vs-2017/Rigid Bodies.vcxproj.filters
+++ b/projects/vs-2017/Rigid Bodies.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="..\..\code\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\code\Entity.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Scene.hpp">
