--- a/projects/vs-2017/Rigid Bodies.vcxproj
+++ b/projects/vs-2017/Rigid Bodies.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\code\Entity.cpp" />
     <ClCompile Include="..\..\code\main.cpp" />
   </ItemGroup>
   <ItemGroup>
