--- a/projects/vs-2017/Rigid Bodies.vcxproj.filters
+++ b/projects/vs-2017/Rigid Bodies.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="..\..\code\sources\RenderComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\code\sources\Scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
